--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,5 +1,5 @@
 suites:
     main:
-        namespace: codedelivery
-        psr4_prefix: codedelivery
+        namespace: CodeDelivery
+        psr4_prefix: CodeDelivery
         src_path: app
